--- a/src/App.css
+++ b/src/App.css
@@ -396,3 +396,172 @@ section a {
     /* background-color: green; */
   }
 }
+
+@media only screen and (max-width: 1000px) {
+  * {
+    /* background-color: red; */
+  }
+
+  .summary {
+    width: calc(50% - 4rem);
+  }
+  .flex-container {
+    margin-left: 0;
+    margin-right: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .right-column {
+  }
+
+  section {
+    /* background-color: green; */
+  }
+}
+@media only screen and (max-width: 800px) {
+  * {
+    /* background-color: red; */
+  }
+
+  .summary {
+    width: calc(50% - 4rem);
+  }
+  .flex-container {
+    margin-left: 0;
+    margin-right: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .right-column {
+  }
+
+  section {
+    /* background-color: green; */
+  }
+
+  .project-flex-container {
+    display: flex;
+    flex-direction: column;
+    /* background-color: blue; */
+  }
+
+  .left-col {
+    width: calc(100% - 3rem);
+  }
+  .right-col {
+    width: calc(100% - 3rem);
+  }
+  .nav ul {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  * {
+    /* background-color: red; */
+  }
+
+  .summary {
+    width: calc(80% - 4rem);
+  }
+  .flex-container {
+    margin-left: 0;
+    margin-right: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .right-column {
+  }
+
+  section {
+    /* background-color: green; */
+  }
+
+  .project-flex-container {
+    display: flex;
+    flex-direction: column;
+    /* background-color: blue; */
+  }
+
+  .left-col {
+    width: calc(100% - 3rem);
+  }
+  .right-col {
+    width: calc(100% - 3rem);
+  }
+}
+
+@media only screen and (max-width: 440px) {
+  * {
+    /* background-color: red; */
+  }
+
+  .summary {
+    width: calc(80% - 0.5rem);
+  }
+  .flex-container {
+    margin-left: 0;
+    margin-right: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .right-column {
+    width: calc(100% - 3rem);
+  }
+
+  section {
+    /* background-color: green; */
+    padding: 0.25rem;
+  }
+
+  .project-flex-container {
+    display: flex;
+    flex-direction: column;
+    /* background-color: blue; */
+  }
+
+  .left-col {
+    width: calc(100% - 3rem);
+  }
+  .right-col {
+    width: calc(100% - 3rem);
+  }
+
+  .education,
+  .about {
+    padding: 1rem;
+  }
+  .about li,
+  .education li {
+    width: 48%;
+    /* background-color: green; */
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+    padding: 2px;
+  }
+}
+
+@media only screen and (min-width: 2000px) {
+  *{
+    /* background-color: red; */
+  }
+  .flex-container{
+    width: calc(100% - 30rem);
+    margin-left: 15rem;
+    margin-right: 15rem;
+  }
+}
